--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
-	"name"			: "Foccusser",
-	"version"		: "1.0",
+	"name"			: "Foccussed",
+	"version"		: "1.1",
 	"description"	: "Avoid distractions.. Focus on the content that matter... ",
-	"minimum_chrome_version"	: "4.1",
+	"minimum_chrome_version"	: "18",
+	"manifest_version": 2,
 	"persmissions"	: ["*://*"],
-	"background_page"	: "background.html",
+	"background"	: {
+		"scripts": ["background.js"]
+	},
 	"content_scripts"	: [
 		{
 			"matches"		: ["*://*/*"],
